--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mawbot2",
+  "name": "mawtwo",
   "version": "1.0.0",
-  "description": "",
+  "description": "Rewrite of the orginal mawbot for the TDM-Network.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -11,20 +11,21 @@
     "url": "git+https://github.com/FlipperLP/mawbot2.git"
   },
   "keywords": [],
-  "author": "Phil",
-  "license": "ISC",
+  "author": "phil",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/FlipperLP/mawbot2/issues"
   },
   "homepage": "https://github.com/FlipperLP/mawbot2#readme",
-  "devDependencies": {
-    "eslint": "^6.7.1",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2"
-  },
   "dependencies": {
     "discord.js": "^11.5.1",
-    "mysql2": "^1.7.0",
-    "sequelize": "^5.19.2"
+    "handlebars": "^4.5.3",
+    "mysql2": "^2.0.2",
+    "pretty-ms": "^5.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.19.1"
   }
 }
