--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "discord.js": "^11.5.1",
     "handlebars": "^4.5.3",
     "mysql2": "^2.0.2",
-    "pretty-ms": "^5.1.0"
+    "pretty-ms": "^5.1.0",
+    "sequelize": "^5.21.3"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
