fixed bot namings

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "MawTwo",
+            "name": "GurgleBot",
             "program": "${workspaceFolder}/index.js"
         }
     ]
