--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
         "no-unused-expressions": 0,
         "no-unused-vars": 0,
         "prefer-destructuring": 0,
-        "no-return-assign": 0
+        "no-return-assign": 0,
+        "no-undef": 0
     }
 }
