--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "discord.js": "^12.3.1",
     "handlebars": "^4.7.6",
+    "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "pretty-ms": "^5.1.0",
     "request": "^2.88.2",
