--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,14 @@
 {
     "env": {
-        "browser": true,
-        "es6": true
+        "commonjs": true,
+        "es2021": true,
+        "node": true
     },
     "extends": [
         "airbnb-base"
     ],
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
     "parserOptions": {
-        "ecmaVersion": 2018,
-        "sourceType": "module"
+        "ecmaVersion": "latest"
     },
     "rules": {
         "consistent-return": 0,
