--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gurglebot",
   "version": "2.4.0",
-  "description": "Rewrite of the orginal mawbot for the TDM-Network. .",
+  "description": "Rewrite of the orginal mawbot for the TDM-Network.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
