[update] changed emoji

--- a/config.json
+++ b/config.json
@@ -37,7 +37,7 @@
                 {
                     "name": "Unwilling",
                     "roleID": "1043475597818613760",
-                    "emoji": "<:food_point:813908789991571516>",
+                    "emoji": "😖",
                     "mature": false
                 },
                 {
