--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,4 +24,4 @@ jobs:
         run: docker compose build
 
       - name: Spin up containers
-        run: docker compose up -d db_gb
+        run: docker compose up -d
