--- a/.github/workflows/deploy_old.yml
+++ b/.github/workflows/deploy_old.yml
@@ -27,4 +27,4 @@ jobs:
         run: docker-compose build
 
       - name: Spin up containers
-        run: docker-compose up -d
+        run: docker-compose down
