changed to vxtwitter

--- a/config.json
+++ b/config.json
@@ -113,7 +113,7 @@
             },
             {
                 "search": "//twitter.com",
-                "replace": "//fxtwitter.com"
+                "replace": "//vxtwitter.com"
             }
         ]
     },
