--- a/config.json
+++ b/config.json
@@ -129,7 +129,7 @@
         "whitelistChannelID": "1134237817334149190",
         "timeout": {
             "min": 120000,
-            "max": 3600000
+            "max": 600000
         }
     }
 }
