--- a/config.json
+++ b/config.json
@@ -128,8 +128,10 @@
         "logChannelID": "1134236099116531884",
         "whitelistChannelID": "1134237817334149190",
         "timeout": {
-            "min": 120000,
-            "max": 600000
+            "min": 120,
+            "minOrg": 120000,
+            "max": 600,
+            "maxOrg": 600000
         }
     }
 }
