--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "GurgleBot",
+    "name": "Mi Amour",
     "guildId": "300051375914483715",
     "teamRole": "300661482830561281",
     "ownerRole": "300654913061388288",
