--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.3'
 services:
-  bot_gb:
+  bot_ma:
     build:
       context: ./
     depends_on:
@@ -8,25 +8,6 @@ services:
     restart: always
     environment:
       DCtoken: ${DISCORD_BOT_TOKEN}
-      DBhost: db_gb
-      DBdatabase: gurglebot
-      DBusername: gurglebot
-      DBpassword: ${DB_PASSWORD}
-  db_gb:
-    image: mariadb:latest
-    restart: always
-    ports:
-      - "${DB_PORT}:3306"
-    volumes:
-      - db_data:/var/lib/mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD_ROOT}
-      MYSQL_DATABASE: gurglebot
-      MYSQL_USER: gurglebot
-      MYSQL_PASSWORD: ${DB_PASSWORD}
-
-volumes:
-  db_data:
 
 networks:
   default:
