add - bio search

--- a/config.json
+++ b/config.json
@@ -36,6 +36,13 @@
             "1141834812143972372"
         ]
     },
+    "bio": {
+        "bioChannels": [
+            "1141823017735946321",
+            "1141831504331284600",
+            "1141834301890117693"
+        ]
+    },
     "linkReplace": {
         "checkChannels": [
             "1141822426636881960",
